Fixed 'first entry after header is shorter' bug of home page
Caused by 'open list' icon of header being too large.

--- a/static/css/settlers.scss
+++ b/static/css/settlers.scss
@@ -149,6 +149,10 @@ img {
     display:				none;
 }
 
+.relative {
+    position:				relative;
+}
+
 .centered {
   text-align:				center;
 }
@@ -436,6 +440,11 @@ span.icon-large {
 span.icon-medium {
   width:                        32px;
   height:                       32px;
+}
+
+span.icon-small {
+    width:			16px;
+    height:			16px;
 }
 
 /*
